# kripta

1_hw/1task/2task/: sbox_demo  sbox_demo.cpp  sbox_tests.cpp
1_hw/1task/3task/: bitops.hpp
1_hw/1task/4task/: Makefile  client.cpp  gen_testfiles.cpp  rc4_tests
1task/: pbox.hpp  pbox_demo.cpp  pbox_tests.cpp
2task/: sbox.hpp  sbox_tests
3task/: bitops_demo  bitops_demo.cpp  bitops_tests  bitops_tests.cpp
4task/: demo.sh  gen_testfiles  protocol.hpp  rc4.hpp  rc4_client  rc4_server  rc4_tests.cpp  server.cpp
5_hw/1_task/tests/: CMakeLists.txt  unit_tests.cpp
5_hw/1_task/tests/include/: math_service.h
5_hw/1_task/tests/src/: main.cpp  math_service.cpp
5_hw/2_task/: demo_fermat  test_primality
5_hw/2_task/include/: fermat_primality_test.h  i_primality_test.h  probabilistic_primality_base.h
5_hw/2_task/src/: demo_fermat.cpp
5_hw/2_task/tests/: test_primality.cpp
6_hw/1_task/: demo  main.cpp  math_service.cpp  math_service.h  primality_test.cpp  primality_test.h  probabilistic_tests.cpp  probabilistic_tests.h
